fixes left-hand alignment of course summary header.

--- a/app/styles/ilios-common/components/course-summary-header.scss
+++ b/app/styles/ilios-common/components/course-summary-header.scss
@@ -1,5 +1,6 @@
 .course-summary-header {
   @include ilios-overview($orange);
+  padding-left: .8rem;
 
   .course-summary-header-top {
     @include ilios-overview-header;
